install webpack as dev-dependency

--- a/package.json
+++ b/package.json
@@ -15,4 +15,8 @@
   "bugs": {
     "url": "https://github.com/ryuran/poe2020.git"
   },
+  "homepage": "https://github.com/ryuran/poe2020.git",
+  "devDependencies": {
+    "webpack": "^4.41.5"
+  }
 }
