--- a/package.json
+++ b/package.json
@@ -15,4 +15,9 @@
   "bugs": {
     "url": "https://github.com/ryuran/poe2020.git"
   },
-  "homepage": "https://github.com/ryuran/poe2020.git"
+  "homepage": "https://github.com/ryuran/poe2020.git",
+  "devDependencies": {
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
+  }
+}
