--- a/package.json
+++ b/package.json
@@ -19,15 +19,22 @@
   },
   "homepage": "https://github.com/ryuran/poe2020.git",
   "devDependencies": {
+    "autoprefixer": "^9.7.4",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
+    "cssnano-preset-advanced": "^4.0.7",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
+  },
+  "dependencies": {
+    "browserlist": "^1.0.1",
+    "cssnano": "^4.1.10"
   }
 }
